[package]
name = "whma"
version = "0.1.0"
edition = "2024"

[dependencies]
windows = { version = "0.48", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_Graphics_Gdi"
]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"